[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simbio-<name>"
authors = [
    { name="<user>", email="<email>" },
]
description = "<description>"
keywords = ["SimBio"]
license = {text = "MIT License"}
classifiers = [
    "Framework :: SimBio",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "readme", "version"]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/<user>/simbio-<name>"
"Bug Tracker" = "https://github.com/<user>/simbio-<name>/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
readme = {file = "README.md"}

[tool.setuptools_scm]

[tool.isort]
profile = "black"
